Put the image in sizes and shape, correct overflow along x-axis

--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -7,6 +7,7 @@
 body{
     width: 100%;
     font-family: Arial, Helvetica, sans-serif;
+    overflow-x: hidden;
 }
 
 a{
@@ -51,7 +52,6 @@ a{
 
 .eight-grids{
     width: 100%;
-    justify-content: space-between;
 }
 
 .right-list {
@@ -205,7 +205,7 @@ position: absolute;
 .right-art-top a{
     text-decoration: none;
     color: #FFFFFF;
-    font-size: 35px;
+    font-size: 32px;
     position: relative;
     top: 50px;
     left: 15px;
@@ -238,13 +238,14 @@ position: absolute;
 .right-art-bottom a{
     text-decoration: none;
     color: #FFFFFF;
-    font-size: 35px;
+    font-size: 32px;
     position: relative;
     top: 70px;
     line-height: 35px;
     z-index: 0;
     display: block;
     margin-left: 15px;
+    right: 5px;
 }
 
 .left-art {
@@ -329,21 +330,30 @@ position: absolute;
     height: 198px;
 }
 
- .info{
-    margin: 50px 0 30px 40px;
+ .info {
+    margin: 50px 0 0 0 ;
 }
 
-.info a{
+.info h1 {
     text-decoration: none;
     font-size: 25px;
     font-weight: 700;
     color: #FF4422;
 }
+
 .info a:hover {
     text-decoration: none;
     font-size: 25px;
     font-weight: 700;
     color: #000000;
+    }
+
+.info-txt-div {
+    width: 370px;
+}
+
+.news-latest {
+    margin-left: 55px;
 }
 
 .img-clue a{
@@ -357,6 +367,7 @@ position: absolute;
     color: #000000;
     margin: 0 55px 0 55px;
     width: 270px;
+    gap: 20px;
 }
 
 .top-header, .app-div {
@@ -380,7 +391,7 @@ position: absolute;
     flex-direction: row;
     justify-content: space-between;
     width: 100%;
-    
+    padding-bottom: 20px;
 }
 
 .funding-nav ul{
@@ -391,10 +402,19 @@ position: absolute;
     font-size: 16px;
     padding: 60px 60px 0 0;
     color: #FF4422;
+    position: relative;
+    left: 40px;
 }
 
 .red h4{
     width: 270px;
+}
+#fund-round, #latest-d {
+    margin-left: 60px;
+}
+
+#latest-d {
+    margin-left: 55px;
 }
 
 .funding img{
@@ -402,12 +422,17 @@ position: absolute;
     justify-content: space-between;
 }
 
+.funding-list a {
+    color: #f42;
+}
+
+
 .apps{
     display: grid;
     grid-template-columns: repeat(3, auto);
-    grid-template-rows: repeat(12, auto);
-    grid-gap: 0 30px;
-    margin: 10px 40px 10px 40px;
+    grid-template-rows: repeat(3, auto);
+    margin: 0 20px 0 20px;
+    justify-content: center
 }
 
 .apps-txt{
@@ -431,7 +456,8 @@ position: absolute;
 
 .reddit-div{
     background-image: url("https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2019/01/reddit-argument-513x270.png");
-    height: 276px;
+    height: 270px;
+    width: 360px;
     display: grid;
     grid-column: 1;
     grid-row: 2;
@@ -470,6 +496,7 @@ position: absolute;
     left: 20px;
     z-index: 0;
 }
+
 .reddit-div a{
     color: #FFFFFF;
 }
@@ -487,7 +514,7 @@ position: absolute;
     grid-column: 1;
     grid-row: 3;
     height: 120px;
-    padding-left: 10px;
+    width: 360px;
 }
 .red-txt h4{
     margin: 10px;
@@ -495,11 +522,12 @@ position: absolute;
 .red-txt a{
     color: red;
     margin: 10px;
+    width: 200px;
 }
 .red-txt img{
     position: relative;
-    left: 288px;
-    bottom: 95px;
+    left: 240px;
+    bottom: 112px;
     width: 120px;
     height: 120px;
     z-index: 0;
@@ -613,11 +641,12 @@ position: absolute;
     grid-column: 2;
     grid-row: 3;
     height: 120px;
+    width: 360px;
 }
 .latest-div1 img{
     position: relative;
-    bottom: 85px;
-    left: 289px;
+    bottom: 120px;
+    left: 240px;
     height: 120px;
     width: 120px;
     z-index: 0;
@@ -629,6 +658,7 @@ position: absolute;
 .latest-div1 a{
     color: red;
     padding-left: 20px;
+    width: 200px;
 }
 
 .latest-div2{
@@ -638,20 +668,24 @@ position: absolute;
     color: red;
     background: rgb(252, 213, 210);
     height: 110px;
+    width: 360px;
 }
 
 .latest-div2 img{
     width: 120px;
     height: 110px;
     position: relative;
-    left: 293px;
-    bottom: 84px;
-}
+    left: 240px;
+    bottom: 120px;
+    }
 
 .latest-div2 a{
     padding-left: 20px;
     padding-top: 10px;
     color: red;
+    width: 200px;
+    position: relative;
+    bottom: 10px;
 }
 .latest-div2 h4{
     padding-left: 20px;
@@ -670,14 +704,15 @@ position: absolute;
     width: 120px;
     height: 110px;
     position: relative;
-    left: 298px;
-    bottom: 74px;
+    left: 240px;
+    bottom: 93px;
 }
 
 .latest-div3 a{
     padding-left: 20px;
     padding-top: 10px;
     color: red;
+    width:200px;
 }
 
 .latest-div3 h4{
@@ -698,6 +733,7 @@ position: absolute;
     padding-left: 20px;
     padding-top: 10px;
     color: red;
+    width:200px;
 }
 .latest-div4 h4{
     padding-left: 20px;
@@ -709,8 +745,8 @@ position: absolute;
     width: 120px;
     height: 110px;
     position: relative;
-    left: 289px;
-    bottom: 74px;
+    left: 240px;
+    bottom: 92px;
 }
 
 .latest-div5 {
@@ -725,6 +761,7 @@ position: absolute;
     padding-left: 20px;
     padding-top: 10px;
     color: red;
+    width:200px;
 }
 .latest-div5 h4{
     padding-left: 20px;
@@ -736,8 +773,8 @@ position: absolute;
     width: 100px;
     height: 110px;
     position: relative;
-    left: 313px;
-    bottom: 74px;
+    left: 260px;
+    bottom: 93px;
 }
 
 .latest-div6 {
@@ -749,9 +786,13 @@ position: absolute;
 }
 
 .latest-div6 a{
+    font-size: 13px;
     padding-left: 20px;
     padding-top: 10px;
     color: red;
+    width:200px;
+    position: relative;
+    bottom: 5px;
 }
 .latest-div6 h4{
     padding-left: 20px;
@@ -763,8 +804,8 @@ position: absolute;
     width: 120px;
     height: 110px;
     position: relative;
-    left: 298px;
-    bottom: 92px;
+    left: 240px;
+    bottom: 98px;
 }
 
 .latest-div7 {
@@ -776,8 +817,8 @@ position: absolute;
 }
 .latest-div7 img{
     position: relative;
-    bottom: 102px;
-    left: 289px;
+    bottom: 93px;
+    left: 240px;
     height: 120px;
     width: 120px;
     z-index: 0;
@@ -788,10 +829,13 @@ position: absolute;
     padding: 20px 0 10px 20px;
 }
 
-.latest-div7 a{
+.latest-div7 a {
     color: red;
     padding-left: 20px;
+    width: 200px;
+    font-size: 13px;
 }
+
 
 .simpson {
     background-image: url("https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2020/06/header-image-the-outer-worlds-516x270.png");
@@ -801,6 +845,7 @@ position: absolute;
     grid-column: 2;
     grid-row: 2;
     position: relative;
+    width: 360px;
 }
 .simpson::before{
     content: '';
@@ -842,12 +887,14 @@ position: absolute;
     grid-row: 2;
     position: relative;
     z-index: 0;
+    width: 360px;
 }
 .wacom a{
     color: #FFFFFF;
     position: relative;
     top: 70px;
     left: 20px;
+    font-size: 12px;
 }
 
 .wacom small{
@@ -1041,6 +1088,14 @@ position: absolute;
     left: 20px;
 }
 
+.fb-class h1 {
+    font-size: 20px;
+}
+
+.iwatch h1 {
+    font-size: 18px;
+}
+
 .iwatch{
     background-image: url("https://img-cdn.tnwcdn.com/image?fit=1280%2C720&url=https%3A%2F%2Fcdn0.tnwcdn.com%2Fwp-content%2Fblogs.dir%2F1%2Ffiles%2F2020%2F06%2Fheader-image-apple-watch-band-bands.png&signature=e71f734a54cf45be7afa11767acb60fa");
     color: #FFFFFF;
@@ -1107,9 +1162,11 @@ position: absolute;
 .funding-img-cont{
     display: grid;
     grid-template-columns: repeat(4, auto);
-    column-gap: 20px;
-    row-gap: 10px;
-    justify-content: space-between;
+}
+
+.funding-img-cont  img {
+    height: 300px;
+    width: 270px;
 }
 
 .one{
@@ -1136,7 +1193,7 @@ position: absolute;
 
 .micro-grav {
     width: 270px;  
-    border: 3px solid red;
+    
 }
 
 .micro-grav h4{
@@ -1173,12 +1230,20 @@ position: absolute;
     grid-template-columns: repeat(3, auto);
 }
 
+.funding-list {
+    margin-right: 55px;
+}
+
 .creative-cont{
     display: grid;
     grid-template-columns: repeat(3, auto);
     grid-template-rows: repeat(2, auto);
     grid-column-gap: 15px;
     grid-row-gap: 20px;
+}
+
+.creative-div, .launch-div {
+    width: 360px;
 }
 
 .latest-img {
